--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 body {
-	font-size: 1.0em;
+	font-size: 1.1em;
 	margin: 40px;
 	padding: 20px;
 	background-color: #FFFFFF;
@@ -13,7 +13,33 @@ body {
 	color: #0000FF;
 }
 
-.btn-class{
+.btn {
+  background: #000000;
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3px;
+  text-shadow: 1px 1px 3px #666666;
+  -webkit-box-shadow: 0px 1px 3px #666666;
+  -moz-box-shadow: 0px 1px 3px #666666;
+  box-shadow: 0px 1px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 3.0em;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #000000;
+  background-image: -webkit-linear-gradient(top, #000000, #707070);
+  background-image: -moz-linear-gradient(top, #000000, #707070);
+  background-image: -ms-linear-gradient(top, #000000, #707070);
+  background-image: -o-linear-gradient(top, #000000, #707070);
+  background-image: linear-gradient(to bottom, #000000, #707070);
+  text-decoration: none;
+}
+
+/* .btn-class{
  display: inline-block;
  border:1px solid #C9AE34;
  color: #705D07;
@@ -39,5 +65,5 @@ body {
  -moz-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 0 1px #FCE88D;
  -webkit-box-shadow: inset 0 1px 0 0 #FFF6CE,inset 0 -1px 0 0 #E3C852,inset 0 0 0 1px #FCE88D;
  background-color: #FCDF5B;
-}
+} */
 
